feat: Miembros trae ahora los intereses de las personas
